✨ (index.html, script.js, style.css): add new project "Project Manager" to showcase improved project management features and update tech stack display to enhance layout and styling consistency.
♻️ (script.js, style.css): refactor tech stack and project badges
to use new CSS classes for better maintainability and readability.

🐛 (style.css): fix visual bug in ping animation by ensuring
position: relative is applied correctly.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- TECH STACK -->
     <section id="tech-stack-section">
       <span class="section-title">Main Tech Stack</span>
-      <div id="tech-stack-container" class="flex flex-wrap gap-2"></div>
+      <div id="tech-stack-container"></div>
     </section>
 
     <!-- PROJETOS -->
@@ -68,7 +68,6 @@
       <div class="projects-header">
         <div class="flex items-center gap-3">
           <h2>What I'm building</h2>
-          <!-- WRAPPER DO PING (CORRIGIDO NO CSS PARA TER POSITION: RELATIVE) -->
           <div class="ping-wrapper">
             <span class="ping-dot"></span>
             <span class="static-dot"></span>
